--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "Fetch state vectors for Solar System bodies from the JPL HORIZONS on-line solar system data and ephemeris.",
   "main": "index.ts",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
+    "test": "jest",
     "start": "nodemon",
     "prettier": "prettier --single-quote --print-width 80 \"./**/*.{js,ts}\" --write"
   },
@@ -17,18 +17,21 @@
     "linters": {
       "./**/*.{js,ts}": [
         "prettier --single-quote --print-width 80 \"./**/*.{js,ts}\" --write",
-        "git add"
+        "jest --bail --coverage --findRelatedTests"
       ]
     }
   },
   "author": "Darrell A. Huffman",
   "license": "GNU General Public License v3.0",
   "devDependencies": {
+    "@types/jest": "^24.0.13",
     "@types/node": "^12.0.0",
     "husky": "^2.2.0",
+    "jest": "^24.8.0",
     "lint-staged": "^8.1.6",
     "nodemon": "^1.19.0",
-    "prettier": "^1.17.0",
+    "prettier": "^1.17.0", 
+    "ts-jest": "^24.0.2",
     "tslint": "^5.16.0",
     "typescript": "^3.4.5",
     "yargs": "^13.2.4"
