--- a/package.json
+++ b/package.json
@@ -2,11 +2,12 @@
   "name": "jpl-horizons-client",
   "version": "0.1.0",
   "description": "Fetch state vectors for Solar System bodies from the JPL HORIZONS on-line solar system data and ephemeris.",
-  "main": "index.ts",
+  "main": "./dist/index.js",
   "scripts": {
     "test": "jest",
     "start": "nodemon",
-    "prettier": "prettier --single-quote --print-width 80 \"./**/*.{js,ts}\" --write"
+    "prettier": "prettier --single-quote --print-width 80 \"./**/*.{js,ts}\" --write",
+    "tsc": "tsc"
   },
   "husky": {
     "hooks": {
