--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "Fetch state vectors for Solar System bodies from the JPL HORIZONS on-line solar system data and ephemeris.",
   "main": "./dist/index.js",
   "bin": {
-    "fetch-bodies": "bin/fetch-bodies"
+    "fetch-bodies": "bin/fetch-bodies.js"
   },
   "scripts": {
     "test": "jest",
@@ -43,6 +43,7 @@
   "dependencies": {
     "cross-fetch": "^3.0.2",
     "csvtojson": "^2.0.8",
+    "node-emoji": "^1.10.0",
     "yargs": "^13.2.4"
   }
 }
